--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "sails-hook-grunt": "^5.0.0",
     "sails-hook-orm": "^4.0.0",
     "sails-hook-sockets": "^2.0.0",
-    "sails-mongo": "^2.0.0"
+    "sails-mongo": "^2.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "5.16.0"
